--- a/src/main/resources/com/example/sda/fxml/auth/Login.fxml
+++ b/src/main/resources/com/example/sda/fxml/auth/Login.fxml
@@ -12,8 +12,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Text?>
 
-<StackPane styleClass="body" stylesheets="@../../css/styles/login.css"
-           xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sda.controllers.auth.LoginController">
+<StackPane styleClass="body" stylesheets="@../../css/styles/login.css" xmlns="http://javafx.com/javafx/25" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.sda.controllers.auth.LoginController">
 
     <!-- Main Card Container - Fixed Size HBox -->
     <!-- Changed: Fixed size (1000x600) to create the "Card" effect -->
@@ -78,9 +77,7 @@
                     </StackPane>
                 </VBox>
 
-                <HBox alignment="CENTER_LEFT" spacing="10">
-                    <Region HBox.hgrow="ALWAYS" />
-                </HBox>
+                <HBox alignment="CENTER_RIGHT" spacing="10" />
 
                 <Button fx:id="loginBtn" maxWidth="Infinity" onAction="#handleLogin" styleClass="submit-btn" text="Login to Account">
                     <VBox.margin>
